--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "predeploy": "vite build",
-    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "NODE_ENV=production node dist/index.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "start": "vite",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
@@ -53,16 +53,20 @@
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
+    "datatables.net": "^2.3.2",
+    "datatables.net-dt": "^2.3.2",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
+    "ethers": "^6.15.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.4.2",
+    "jquery": "^3.7.1",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "next-themes": "^0.4.6",
@@ -70,12 +74,15 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
+    "react-countdown": "^2.3.6",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^7.7.1",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.2",
     "tailwind-merge": "^2.6.0",
